--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@
 
 #black {
   color: #000000;
-  border-radius: 110px 15px;
-  height: 250px;
+  border-radius: 15px;
+  height: 350px;
   width: 600px;
   margin: 0 auto;
   padding-bottom: 30px;
@@ -32,6 +32,11 @@
   margin-left: 20%;
   margin-right: 20%;
   margin-bottom: 600px;
+}
+.center_div {
+  margin: 0 auto;
+  width: 75%;
+
 }
 
 footer {
